Adwaita: Fix scrollbar theming a bit
Reinstate the fine-tune mode scrollbars.

--- a/gtk/theme/Adwaita/_common.scss
+++ b/gtk/theme/Adwaita/_common.scss
@@ -2398,7 +2398,7 @@ scrollbar {
     &:disabled { background-color: transparent; }
   }
 
-  &.fine-tune {
+  & range.fine-tune {
     slider {
       min-width: 4px;
       min-height: 4px;
